# kafka-whole

./: Cargo.toml  Dockerfile  compose.yml  flake.nix
consumer/: Cargo.toml
consumer/src/: main.rs
mybank/: Cargo.toml
mybank/src/: main.rs
producer/: Cargo.toml
producer/src/: main.rs
sandwich-recipes/: Cargo.toml
sandwich-recipes/src/: helpers.rs  main.rs
sandwich-recipes/src/domain/: create_sandwich.rs  delete_sandwich.rs  find_all_sanwiches.rs  find_one_sandwich.rs  mod.rs  sandwich.rs  update_sandwich.rs
sandwich-recipes/src/driving/rest_handler/: errors.rs  mod.rs  sandwiches.rs  validate.rs
sandwich-recipes/src/tests/: mod.rs  test_utils.rs
