[workspace]
resolver = "2"
members = [
    "producer",
    "consumer",
]
authors = ["Joel DSouza <joeldsouzax@gmail.com>"]

[workspace.dependencies]
tokio = { version = "1.41.1", features = ["full"] }


[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.metadata.crane]
name = "kafka-whole"
