[workspace]
resolver = "2"
members = [ "consumer","producer"]
authors = ["Joel DSouza <joeldsouzax@gmail.com>"]

[workspace.dependencies]
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
tokio = { version = "1.42.0", features = ["full"]}

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.metadata.crane]
name = "kafka-whole"
